small codacy and spotless fixes
Signed-off-by: Alfredo Gutierrez Grajeda <alfredo@hashgraph.com>